modified:   index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                <ul>
                   <li>Self</li>
                   <li>Team</li>
-                  <li>No Source</li>
+                  <li>Old Projects</li>
                   <li>Other</li>
                </ul>
             </nav>
@@ -60,12 +60,12 @@
                   <div class="head">
                      <div><img src="old/img/opengl_3D_demo.png"></div>
                      <ul>
-                        <li> Platforms ： Linux Windows</li>
+                        <li> platforms ： linux windows</li>
                         <li> 年  ： 2019</li>
-                        <li> Complier  ： clang</li>
-                        <li> 言語 ：C</li>
-                        <li> Librery : GLEW GLFW3</li>
-                        <li> Threads : 2</li>
+                        <li> complier  ： clang</li>
+                        <li> 言語 ：c</li>
+                        <li> librery : glew glfw3</li>
+                        <li> threads : 2</li>
                      </ul>
                   </div>
             
@@ -75,8 +75,19 @@
                </article>
 
                <article>
-                  <h2>Test</h2>
-                  <img src="img/test.png">
+                  <h2>Change Runner 3D</h2>
+                  <div class="head">
+                     <div><img src="img/test.png"></div>
+                     <ul>
+                        <li> Platforms ： Linux Windows</li>
+                        <li> 年  ： 2019</li>
+                        <li> Complier  ： clang</li>
+                        <li> 言語 ：C</li>
+                        <li> Librery : GLEW GLFW3</li>
+                        <li> Threads : 2</li>
+                     </ul>
+                  </div>
+                  <p>Test Test Test</p>
                </article>
 
                <article>
