modified:   index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <ul>
                            <li> プラットフォーム： linux windows</li>
                            <li> 年  ： 2019</li>
-                           <li> complier  ： clang</li>
+                           <li> コンパイラ： clang</li>
                            <li> 言語 ：c</li>
                            <li> librery : glew glfw3</li>
                            <li> threads : 2</li>
@@ -82,14 +82,16 @@
                   <article>
                      <h2>Change Runner 3D</h2>
                      <div class="head">
-                        <div><img src="img/test.png"></div>
+                        <video controls="" preload="none" poster="img/test.png">
+                           <source src="old/videos/change_runner_3D.mp4">
+                        </video>
+
                         <ul>
                            <li> プラットフォーム： Linux Windows</li>
                            <li> 年  ： 2019</li>
-                           <li> Complier  ： clang</li>
-                           <li> 言語 ：C</li>
-                           <li> Librery : GLEW GLFW3</li>
-                           <li> Threads : 2</li>
+                           <li> コンパイラ： gcc</li>
+                           <li> 言語 ：C++</li>
+                           <li> Librery : GLEW GLFW3 GLM</li>
                         </ul>
                      </div>
                      <p>Test Test Test</p>
