--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                      <h2>FoundryCraft 2015 And 2018</h2>
                      <div class="head">
                         <div>
-                           <video controls="" preload="none" poster="old/img/opengl_3D_demo.png">
-                              <source src="videos/foundry_craft_lithium.mp4">
+                           <video controls="" preload="none" poster="img/test.png">
+                              <source src="old/videos/foundry_craft.mp4">
                            </video>
                         </div>
                         
