modified:   index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
                         </ul>
                      </div>
                      <p>アストロイドウォーズは、昔のアーケードゲームに似ています。宇宙を漂う小惑星にぶつからないように動きながら撃って破壊し、全滅を目指します。小惑星に当たるごとにhpが下がり、hp０になるとゲームオーバーです。</p>
-                     <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
                   </article>
 
                   <article>
@@ -76,7 +75,6 @@
                         </ul>
                      </div>
                   <p>これはopenglのパフォーマンスデモンストレーションです。データはコンソールを出します。</p>
-                     <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
                   </article>
 
                   <article>
@@ -111,7 +109,7 @@
                         </ul>
                      </div>
                      <p>Test Test Test</p>
-                     <a href="https://github.com/Xenose/xenose.github.io">
+                     <a href="https://github.com/Xenose/xenose.github.io" target="_blank">
                         <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg"></a>
                   </article>
 
@@ -132,7 +130,6 @@
                         </ul>
                      </div>
                   <p>これはopenglのパフォーマンスデモンストレーションです。データはコンソールを出します。</p>
-                     <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
                   </article>
 
                   <article>
@@ -152,7 +149,7 @@
                         </ul>
                      </div>
                   <p>これはopenglのパフォーマンスデモンストレーションです。データはコンソールを出します。</p>
-                  <a href="https://github.com/Xenose/TetrisGame">
+                  <a href="https://github.com/Xenose/TetrisGame" target="_blank">
                      <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
                   </a>
                   </article>
@@ -178,7 +175,7 @@
                   </div>
                   <p>Members<br><br>Test Test Test</p>
 
-                  <a href="https://github.com/teamunitytca/mappy">
+                  <a href="https://github.com/teamunitytca/mappy" target="_blank">
                         <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
                   </a>
                </article>
@@ -200,10 +197,6 @@
                      </ul>
                   </div>
                   <p>Test Test Test</p>
-
-                  <a href="https://github.com/teamunitytca/mappy">
-                        <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
-                  </a>
                </article>
             </div>
             
@@ -211,10 +204,6 @@
                <article>
                   <h2>Home Network</h2>
                   <p>Test Test Test</p>
-
-                  <a href="https://github.com/teamunitytca/mappy">
-                        <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
-                  </a>
                </article>
             </div>
          
