modified:   index.html

--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
                         </ul>
                      </div>
                   <p>これはopenglのパフォーマンスデモンストレーションです。データはコンソールを出します。</p>
+                  <a href="https://www.youtube.com/watch?v=sCj4pmMuxm0" target="_blank">
+                        <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/youtube.svg">
+                  </a>
                   </article>
 
                   <article>
