modified:   index.html

--- a/index.html
+++ b/index.html
@@ -157,6 +157,26 @@
                   </a>
                   </article>
 
+                  <article>
+                     <h2>Old Portfolio Site</h2>
+                     <div class="head">
+                        <div>
+                           <video controls="" preload="none" poster="old/img/opengl_3D_demo.png">
+                              <source src="videos/terminal_tetris.mp4">
+                           </video>
+                        </div>
+                        
+                        <ul> 
+                           <li> 年: 2020</li>
+                           <li> 言語: HTML CSS Javascript</li>
+                        </ul>
+                     </div>
+                  <p>これはopenglのパフォーマンスデモンストレーションです。データはコンソールを出します。</p>
+                  <a href="https://github.com/Xenose/TetrisGame" target="_blank">
+                     <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
+                  </a>
+                  </article>
+
             </div>
 
          
