modified:   index.html

--- a/index.html
+++ b/index.html
@@ -142,12 +142,18 @@
                         
                         <ul>
                            <li> platforms ： MineCraft Mod</li>
-                           <li> 年  ： 2015 / 2018</li>
+                           <li> 年  ： 2015~2016 / 2018</li>
                            <li> 言語 ：Java</li>
                            <li> ゲーム: MineCraft</li>
                         </ul>
                      </div>
                   <p>これはopenglのパフォーマンスデモンストレーションです。データはコンソールを出します。</p>
+                  <a href="https://github.com/Xenose/FoundryCraft" target="_blank">
+                        <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg"></a>
+
+                  <a href="https://github.com/Xenose/FoundryCraft-2" target="_blank">
+                        <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg"></a>
+
                   <a href="https://www.youtube.com/watch?v=sCj4pmMuxm0" target="_blank">
                         <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/youtube.svg">
                   </a>
