new file:   img/mappy.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                   <h2>Mappy</h2>
                   <div class="head">
                      <div>
-                        <video controls="" preload="none" poster="">
+                        <video controls="" preload="none" poster="img/mappy.png">
                            <source src="videos/mappy.mp4">
                         </video></div>
                      <ul>
