new file:   img/zombie.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                   <h2>Zombie Masacre</h2>
                   <div class="head">
                      <div>
-                        <video controls="" preload="none" poster="old/img/zombie_masacre.png">
+                        <video controls="" preload="none" poster="img/zombie.png">
                            <source src="old/videos/zombie_masacre.mp4">
                         </video>
                      </div>
