--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                      <h2>Terminal Tetris</h2>
                      <div class="head">
                         <div>
-                           <video controls="" preload="none" poster="old/img/opengl_3D_demo.png">
+                           <video controls="" preload="none" poster="img/terminal_tetris.png">
                               <source src="videos/terminal_tetris.mp4">
                            </video>
                         </div>
