new file:   img/portfolio.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -117,13 +117,11 @@
                   <article>
                      <h2>Portfolio Site</h2>
                      <div class="head">
-                        <div><img src="img/test.png"></div>
+                        <div><img src="img/portfolio.png"></div>
                         <ul>
                            <li> Platforms ： phone pc</li>
                            <li> 年  ： 2020</li>
                            <li> 言語 ：HTML CSS Javascript</li>
-                           <li> Librery : GLEW GLFW3</li>
-                           <li> Threads : 2</li>
                         </ul>
                      </div>
                      <p>Test Test Test</p>
