modified:   index.html

--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
                      <tr>
                         <th>言語</th>
                         <th>経験</th>
+                        <th>始めて使用</th>
+                        <th>最後使用</th>
                      </tr>
 
                      <tr>
                         <th>HTML</th>
                         <th>10年</th>
+                        <th>2010</th>
+                        <th>2020</th>
                      </tr>
 
                      <tr>
