--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       <link rel="stylesheet" type="text/css" href="main.css">
       <link rel="stylesheet" type="text/css" href="home.css">
       <link rel="stylesheet" type="text/css" href="menu.css">
-      <link rel="stylesheet" type="text/css" href="footer.css">
+      <link rel="stylesheet" type="text/css" href="footer.css"> 
+
+      <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet"> 
 
       <script src="menu.js"></script>
       <script src="menuTabs.js"></script>
