modified:   index.html

--- a/index.html
+++ b/index.html
@@ -149,8 +149,10 @@
                      </tr>
 
                      <tr>
-                        <th>GlSL</th>
-                        <th>1年</th>
+                        <th>GLSL</th>
+                        <th>2年</th>
+                        <th>2018</th>
+                        <th>2020</th>
                      </tr>
 
                      <tr>
