modified:   index.html

--- a/index.html
+++ b/index.html
@@ -373,10 +373,16 @@
                         <li> 年  ： 2016</li>
                         <li> 言語 ：c#</li>
                         <li> Engine : Unity 3D</li>
-                        <li> チーム人数: ~11</li> 
+                        <li> チーム人数: 15</li> 
                      </ul>
                   </div>
-                  <p>Test Test Test</p>
+                  <p>チーム<br>
+                  Sebastian Johansson, Patrik Grip, Jackob Svedlund, Alex Mattila,
+                  Danile Ahlgren, Markus Östmo, Marcus Wiberg, Jonas Karlsson, 
+                  Pontus Pursche, Ludvig Åslund, Tobias Carlsson, Alexander Johansson,
+                  Filip Ljunglöf, Rasmus Sehlin, Magnus Sahlin
+                  <br><br>
+                  Test Test Test</p>
                </article>
             </div>
             
