modified:   index.html

--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
                            <li> Planner :</li> 
                         </ul>
                      </div>
-                     <p>Test Test Test</p>
+                     <p>
+これは、2Dを元に作成した3Dゲームです。次々に流れてくる形に、同じ形を合わせポイントを稼いでいきます。間に一つだけ出てくる形を取ると、さらにポイントが上がり、その後合わせる形が変わります。</p>
                   </article>
 
                   <article>
@@ -254,7 +255,7 @@
                            <li> Planner :</li> 
                         </ul>
                      </div>
-                     <p>Test Test Test</p>
+                     <p></p>
                   </article>
 
                   <article>
@@ -267,7 +268,7 @@
                            <li> 言語 ：HTML CSS Javascript</li>
                         </ul>
                      </div>
-                     <p>Test Test Test</p>
+                     <p></p>
                      <a href="https://github.com/Xenose/xenose.github.io" target="_blank">
                         <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
                      </a>
@@ -286,7 +287,7 @@
                            <li> ゲーム: MineCraft</li>
                         </ul>
                      </div>
-                  <p>これはopenglのパフォーマンスデモンストレーションです。データはコンソールを出します。</p>
+                  <p></p>
                   <a href="https://github.com/Xenose/FoundryCraft" target="_blank">
                         <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg"></a>
 
@@ -311,7 +312,7 @@
                            <li> Librery:</li>
                         </ul>
                      </div>
-                  <p>これはopenglのパフォーマンスデモンストレーションです。データはコンソールを出します。</p>
+                  <p></p>
                   <a href="https://github.com/Xenose/TetrisGame" target="_blank">
                      <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
                   </a>
@@ -326,7 +327,7 @@
                            <li> 言語: HTML CSS Javascript</li>
                         </ul>
                      </div>
-                  <p>これはopenglのパフォーマンスデモンストレーションです。データはコンソールを出します。</p>
+                  <p></p>
                   
                   <a href="https://github.com/Xenose/xenose.github.io" target="_blank">
                         <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
@@ -355,7 +356,8 @@
                         <li> チーム人数: ~8</li> 
                      </ul>
                   </div>
-                  <p>Members<br><br>Test Test Test</p>
+                  <p>Members<br><br>
+                  これは日本の昔のゲーム”マッピー”のクローンです。</p>
 
                   <a href="https://github.com/teamunitytca/mappy" target="_blank">
                         <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
@@ -382,7 +384,7 @@
                   Pontus Pursche, Ludvig Åslund, Tobias Carlsson, Alexander Johansson,
                   Filip Ljunglöf, Rasmus Sehlin, Magnus Sahlin
                   <br><br>
-                  Test Test Test</p>
+                  これは高校時代にチームで作成しました。このゲームはツインスティックシューターを使用します。生き残るために襲いかかるゾンビと戦うゲームです</p>
                </article>
             </div>
             
