modified:   index.html 	modified:   main.css 	modified:   menu.css

--- a/index.html
+++ b/index.html
@@ -58,9 +58,39 @@
                <h3>言語</h3>
                <div class="ProfileHomeWrapper">
                   <table>
+                     <tr>
+                        <th>人間の言語</th>
+                        <th>経験</th>
+                        <th>始めて使用</th>
+                        <th>最後使用</th>
+                     </tr>
 
                      <tr>
-                        <th>言語</th>
+                        <th>スウエーデン語</th>
+                        <th>24年</th>
+                        <th>1995</th>
+                        <th>2020</th>
+                     </tr>
+
+                     <tr>
+                        <th>英語</th>
+                        <th>~24年</th>
+                        <th>1995~2006</th>
+                        <th>2020</th>
+                     </tr>
+
+                     <tr>
+                        <th>日本語</th>
+                        <th>4年</th>
+                        <th>2016</th>
+                        <th>2020</th>
+                     </tr>
+                  </table>
+                  <br>
+                  <table>
+
+                     <tr>
+                        <th>パソコンの言語</th>
                         <th>経験</th>
                         <th>始めて使用</th>
                         <th>最後使用</th>
@@ -211,9 +241,10 @@
                         <ul>
                            <li> プラットフォーム： linux windows</li>
                            <li> 年  ： 2019</li>
+                           <li> 制作期間 : 1日</li>
                            <li> コンパイラ： clang</li>
                            <li> 言語 ：c</li>
-                           <li> librery : glew glfw3</li>
+                           <li> librery : glew glfw3 glm</li>
                            <li> threads : 2</li>
                         </ul>
                      </div>
@@ -230,6 +261,7 @@
                         <ul>
                            <li> プラットフォーム： Linux Windows</li>
                            <li> 年  ： 2019</li>
+                           <li> 制作期間 : 1週間</li>
                            <li> コンパイラ： gcc</li>
                            <li> 言語 ：C++</li>
                            <li> Librery : GLEW GLFW3 GLM GLtext (vallient Github)</li>
@@ -250,6 +282,7 @@
                         <ul>
                            <li> プラットフォーム： Windows</li>
                            <li> 年  ： 2018~2019</li>
+                           <li> 制作期間 : 2ヶ月</li>
                            <li> 言語: VC++</li>
                            <li> Librery : GLEW GLFW3 GLM GLtext (vallient Github)</li>
                            <li> Planner :</li> 
@@ -265,6 +298,7 @@
                         <ul>
                            <li> Platforms ： phone pc</li>
                            <li> 年  ： 2020</li>
+                           <li> 制作期間 : 3日</li>
                            <li> 言語 ：HTML CSS Javascript</li>
                         </ul>
                      </div>
@@ -283,6 +317,7 @@
                         <ul>
                            <li> platforms ： MineCraft Mod</li>
                            <li> 年  ： 2015~2016 / 2018</li>
+                           <li> 制作期間 : 2ヶ月</li>
                            <li> 言語 ：Java</li>
                            <li> ゲーム: MineCraft</li>
                         </ul>
@@ -308,8 +343,9 @@
                         <ul> 
                            <li> プラットフォーム: Windows</li>
                            <li> 年: 2018</li>
+                           <li> 制作期間 : 1日</li>
                            <li> 言語: VC++</li>
-                           <li> Librery:</li>
+                           <li> Librery: conio.h</li>
                         </ul>
                      </div>
                   <p></p>
@@ -324,6 +360,7 @@
                            <img src="img/old_portfolio.png">
                         <ul> 
                            <li> 年: 2020</li>
+                           <li> 制作期間 : 2週間</li>
                            <li> 言語: HTML CSS Javascript</li>
                         </ul>
                      </div>
@@ -351,6 +388,7 @@
                      <ul>
                         <li> Platforms ： Linux Windows</li>
                         <li> 年  ： 2018~2019</li>
+                        <li> 制作期間 : 4ヶ月</li>
                         <li> 言語 ：C#</li>
                         <li> Engine : Unity</li>
                         <li> チーム人数: ~8</li> 
