modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
    <body onload="GenrateMenu(); HideTabs();">
       <main>
          <div id="Home">
+
+            <p style="position: fixed; right: 15px; top: 5px; color: red;">開発中</p>
+                        
             <h1>Portfolio</h1>
             
             <article class="ProfileHome">
