--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </nav>
 
             <div id="self" class="PostWrapper">
-                     <h2>FoundryCraft 2015 And 2018</h2>
+                     <!--<h2>FoundryCraft 2015 And 2018</h2>
                      <div class="head">
                            <video controls="" preload="none" poster="img/test.png">
                               <source src="old/videos/foundry_craft.mp4">
@@ -254,7 +254,7 @@
                   <a href="https://www.youtube.com/watch?v=sCj4pmMuxm0" target="_blank">
                         <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/youtube.svg">
                   </a>
-                  </article>
+                  </article>-->
 
             </div>
 
