modified:   index.html 	modified:   posts/mappy.json

--- a/index.html
+++ b/index.html
@@ -230,59 +230,11 @@
                </ul>
             </nav>
 
-            <div id="self" class="PostWrapper">
-                     <!--<h2>FoundryCraft 2015 And 2018</h2>
-                     <div class="head">
-                           <video controls="" preload="none" poster="img/test.png">
-                              <source src="old/videos/foundry_craft.mp4">
-                           </video>
-                        <ul>
-                           <li> platforms ： MineCraft Mod</li>
-                           <li> 年  ： 2015~2016 / 2018</li>
-                           <li> 制作期間 : 2ヶ月</li>
-                           <li> 言語 ：Java</li>
-                           <li> ゲーム: MineCraft</li>
-                        </ul>
-                     </div>
-                  <p></p>
-                  <a href="https://github.com/Xenose/FoundryCraft" target="_blank">
-                        <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg"></a>
-
-                  <a href="https://github.com/Xenose/FoundryCraft-2" target="_blank">
-                        <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg"></a>
-
-                  <a href="https://www.youtube.com/watch?v=sCj4pmMuxm0" target="_blank">
-                        <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/youtube.svg">
-                  </a>
-                  </article>-->
-
-            </div>
+            <div id="self" class="PostWrapper"></div>
 
          
             <div id="team" class="PostWrapper">
-               <article>
-                  <h2>Mappy</h2>
-                  <div class="head">
-                     <video controls="" preload="none" poster="img/mappy.png">
-                        <source src="videos/mappy.mp4">
-                     </video>
-                     <ul>
-                        <li> Platforms ： Linux Windows</li>
-                        <li> 年  ： 2018~2019</li>
-                        <li> 制作期間 : 4ヶ月</li>
-                        <li> 言語 ：C#</li>
-                        <li> Engine : Unity</li>
-                        <li> チーム人数: ~8</li> 
-                     </ul>
-                  </div>
-                  <p>Members<br><br>
-                  これは日本の昔のゲーム”マッピー”のクローンです。</p>
-
-                  <a href="https://github.com/teamunitytca/mappy" target="_blank">
-                        <img class="icon" src="https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/github.svg">
-                  </a>
-               </article>
-
+               
                <article>
                   <h2>Zombie Masacre</h2>
                   <div class="head">
