--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <script src="PostManager.js"></script>
 
    </head>
-   <body onload="GenrateMenu(); HideTabs(); GenratePosts();">
+   <body onload='GenrateMenu(); HideTabs(); GenratePosts("posts/posts.json");'>
       <p style="position: fixed; right: 15px; top: 5px; color: red;">開発中</p>
       <main>
    <script>
