modified:   index.html

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                      <tr>
                         <th>趣味</th>
                      </tr>
+                     <tr>
+                        <p> test test test</p>
+                     </tr>
                   </table>
                </div>
             </article>
