new file:   html_templates/shell_minimal.html 	modified:   index.html

--- a/html_templates/shell_minimal.html
+++ b/html_templates/shell_minimal.html
@@ -146,7 +146,7 @@
         };
       };
     </script>
-    <script async type="text/javascript" src="index.js"></script>
+    {{{ SCRIPT }}}
     <button id='my-button'>Click me</button>
     <script type='text/javascript'>
     document.getElementById('my-button').addEventListener('click', () => {
@@ -158,5 +158,3 @@
     </script>
   </body>
 </html>
-
-
