deleted:    html_templates/shell_minimal.html 	deleted:    index.cpp 	deleted:    index.js 	deleted:    index.wasm 	modified:   main.css 	modified:   main_en.html

--- a/main_en.html
+++ b/main_en.html
@@ -15,7 +15,7 @@
 
 	 <article>
 	    <h2>Astroid Wars</h2>
-	    <video controls>
+	    <video preload="none" controls>
 	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
 	       --- Video about Astroid wars, browser dose not support format. ---
 	    </video>
@@ -28,7 +28,7 @@
 	
 	 <article>
 	    <h2>Astroid Wars</h2>
-	    <video controls>
+	    <video preload="none" controls>
 	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
 	       --- Video about Astroid wars, browser dose not support format. ---
 	    </video>
@@ -41,7 +41,7 @@
 
 	 <article>
 	    <h2>Astroid Wars</h2>
-	    <video controls>
+	    <video preload="none" controls>
 	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
 	       --- Video about Astroid wars, browser dose not support format. ---
 	    </video>
@@ -54,7 +54,7 @@
 	
 	 <article>
 	    <h2>Astroid Wars</h2>
-	    <video controls>
+	    <video preload="none" controls>
 	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
 	       --- Video about Astroid wars, browser dose not support format. ---
 	    </video>
