new file:   about_en.html 	modified:   index.html 	new file:   language_page_mobile.html 	modified:   main.css 	modified:   main_en.html

--- a/main_en.html
+++ b/main_en.html
@@ -10,49 +10,50 @@
 	    <hr>
 	    <a href="">-- Team projects --</a>
 	    <a href="">-- Skills --</a>
-	    <a href="">-- About  --</a>
+	    <a href="about_en.html">-- About  --</a>
 	    <hr>
 
 	 <article>
 	    <h2>Astroid Wars</h2>
 	    <video preload="none" controls>
 	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
-	       --- Video about Astroid wars, browser dose not support format. ---
-	    </video>
-	    <p>Astroid wars is a game about destroying astroids</p>
-	    <ul>
-	       <li>Written in C++ using SFML</li>
-	       <li>My first real multithreaded game</li>
-	    </ul>
-	 </article>
-	
-	 <article>
-	    <h2>Astroid Wars</h2>
-	    <video preload="none" controls>
-	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
-	       --- Video about Astroid wars, browser dose not support format. ---
-	    </video>
-	    <p>Astroid wars is a game about destroying astroids</p>
-	    <ul>
-	       <li>Written in C++ using SFML</li>
-	       <li>My first real multithreaded game</li>
-	    </ul>
-	 </article>
+	       --- Browser dose not support format, 
+	    <a href="old/videos/astroid_wars.mp4" download="astroid_wars">download here</a>. ---
+	 </video>
+	 <p>Astroid wars is a game about destroying astroids</p>
+	 <ul>
+	    <li>Platforms :: Linux, Windows</li>
+	    <li>Written in :: C++ using SFML</li>
+	    <li>Thoughts :: My first real multithreaded game</li>
+	 </ul>
+      </article>
+     
+      <article>
+	 <h2>OpenGL 3D demo</h2>
+	 <video preload="none" controls>
+	    <source src="old/videos/opengl_3D_demo.mp4" type="video/mp4">
+	    --- Video about OpenGL 3D demo, browser dose not support format. ---
+	 </video>
+	 <p>Astroid wars is a game about destroying astroids</p>
+	 <ul>
+	    <li>Written in C++ using OpenGL with GLM</li>
+	 </ul>
+      </article>
 
-	 <article>
-	    <h2>Astroid Wars</h2>
-	    <video preload="none" controls>
-	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
-	       --- Video about Astroid wars, browser dose not support format. ---
-	    </video>
-	    <p>Astroid wars is a game about destroying astroids</p>
-	    <ul>
-	       <li>Written in C++ using SFML</li>
-	       <li>My first real multithreaded game</li>
-	    </ul>
-	 </article>
-	
-	 <article>
+      <article>
+	 <h2>Change Runner 3D</h2>
+	 <video preload="none" controls>
+	    <source src="old/videos/change_runnder_3D.mp4" type="video/mp4">
+	    --- Video about Astroid wars, browser dose not support format. ---
+	 </video>
+	 <p>This was a demonstartion showing simple OpenGL rendering.</p>
+	 <ul>
+	    <li>Written in C++ using SFML</li>
+	    <li>My first real multithreaded game</li>
+	 </ul>
+      </article>
+     
+      <article>
 	    <h2>Astroid Wars</h2>
 	    <video preload="none" controls>
 	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
