--- a/language_page_mobile.html
+++ b/language_page_mobile.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <link rel="stylesheet" href="main.css">
+      <link rel="stylesheet" href="main_mobile.css">
       <title>Portfoli</title>
    </head>
    <body>
