--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    </head>
    <body>
       <script>
-	 if ( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) 
+	 if ( /Mobi|Android/i.test(navigator.userAgent) ) 
 	 {
 	    window.location.href = "language_page_mobile.html";
 	 }
