modified:   index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    </head>
    <body>
       <main>
-	 <h1>Choose your language / 言語を選択してください</h1>
+	 <h1>Choose your language<br>言語を選択してください</h1>
 	 <hr>
 
 	 <a href="main_en.html">English / 英語           </a><br>
