modified:   main.css 	modified:   main_en.html 	deleted:    language_page_mobile.html 	deleted:    main_mobile.css

--- a/main_en.html
+++ b/main_en.html
@@ -16,9 +16,8 @@
 	 <article>
 	    <h2>Astroid Wars</h2>
 	    <video preload="none" controls>
+	       --- Browser dose not support format --- 
 	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
-	       --- Browser dose not support format, 
-	    <a href="old/videos/astroid_wars.mp4" download="astroid_wars">download here</a>. ---
 	 </video>
 	 <p>Astroid wars is a game about destroying astroids</p>
 	 <ul>
@@ -31,8 +30,8 @@
       <article>
 	 <h2>OpenGL 3D demo</h2>
 	 <video preload="none" controls>
+	    --- Browser dose not support format --- 
 	    <source src="old/videos/opengl_3D_demo.mp4" type="video/mp4">
-	    --- Video about OpenGL 3D demo, browser dose not support format. ---
 	 </video>
 	 <p>Astroid wars is a game about destroying astroids</p>
 	 <ul>
@@ -43,8 +42,8 @@
       <article>
 	 <h2>Change Runner 3D</h2>
 	 <video preload="none" controls>
+	    --- Browser dose not support format --- 
 	    <source src="old/videos/change_runnder_3D.mp4" type="video/mp4">
-	    --- Video about Astroid wars, browser dose not support format. ---
 	 </video>
 	 <p>This was a demonstartion showing simple OpenGL rendering.</p>
 	 <ul>
@@ -56,8 +55,8 @@
       <article>
 	    <h2>Astroid Wars</h2>
 	    <video preload="none" controls>
+	       --- Browser dose not support format --- 
 	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
-	       --- Video about Astroid wars, browser dose not support format. ---
 	    </video>
 	    <p>Astroid wars is a game about destroying astroids</p>
 	    <ul>
