modified:   main_en.html 	deleted:    language_page_mobile.html 	deleted:    main_mobile.css

--- a/main_en.html
+++ b/main_en.html
@@ -15,7 +15,7 @@
 
 	 <article>
 	    <h2>Astroid Wars</h2>
-	    <video preload="none" controls>
+	    <video preload="none" controls poster="old/img/astroid_wars.png">
 	       --- Browser dose not support format --- 
 	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
 	 </video>
@@ -29,7 +29,7 @@
      
       <article>
 	 <h2>OpenGL 3D demo</h2>
-	 <video preload="none" controls>
+	 <video preload="none" controls poster="old/img/opengl_3D_demo.png">
 	    --- Browser dose not support format --- 
 	    <source src="old/videos/opengl_3D_demo.mp4" type="video/mp4">
 	 </video>
@@ -41,7 +41,7 @@
 
       <article>
 	 <h2>Change Runner 3D</h2>
-	 <video preload="none" controls>
+	 <video preload="none" controls poster="old2/img/change_runner_3d.png">
 	    --- Browser dose not support format --- 
 	    <source src="old/videos/change_runnder_3D.mp4" type="video/mp4">
 	 </video>
