modified:   about_en.html 	modified:   main.css 	modified:   main_en.html 	new file:   main_jp.html 	new file:   skills_en.html 	deleted:    language_page_mobile.html 	deleted:    main_mobile.css

--- a/skills_en.html
+++ b/skills_en.html
@@ -6,12 +6,12 @@
    <body>
       <a id="LANG" href="index.html">Language / 言語</a>
       <main> 
-	 <h1>About this page</h1>
+	 <h1>Skills</h1>
 	 <hr>
 	 
 	 <a href="main_en.html">-- Projects --</a>
 	 <a href="">-- Team projects --</a>
-	 <a href="">-- Skills --</a>
+	 <a href="about_en.html">-- About --</a>
 	 <hr>
 
       </main>
