modified:   main_en.html 	new file:   main_team_en.html

--- a/main_team_en.html
+++ b/main_team_en.html
@@ -6,30 +6,29 @@
    <body>
       <a id="LANG" href="index.html">Language / 言語</a>
       <main>
-	    <h1>Portfolio</h1>
+	    <h1>Team Portfolio</h1>
 	    <hr>
-	    <a href="main_team_en.html">-- Team projects --</a>
+	    <a href="main_en.html">-- projects --</a>
 	    <a href="skills_en.html">-- Skills --</a>
 	    <a href="about_en.html">-- About --</a>
 	    <hr>
 
 	 <article>
-	    <h2>Astroid Wars</h2>
-	    <video preload="none" controls muted poster="old/img/astroid_wars.png">
+	    <h2>Zombie massacre</h2>
+	    <video preload="none" controls muted poster="old2/img/zombie.png">
 	       --- Browser dose not support format --- 
-	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
+	       <source src="old/videos/zombie_masacre.mp4" type="video/mp4">
 	    </video>
-	    <p>Astroid wars is a game about destroying astroids</p>
+	    <p>Zombie massacre was written as a collaborate effort during high-school</p>
 	    <ul>
-	       <li>Platforms :: Linux, Windows</li>
-	       <li>Written in :: C++ using SFML</li>
-	       <li>Thoughts :: My first real multithreaded game</li>
+	       <li>Platforms :: Unity</li>
+	       <li>Written in :: C#</li>
+	       <li>Time-line :: 1 week</li>
 	    </ul>
-	    <a href="">-- Github --</a>
 	 </article>
      
 	 <article>
-	    <h2>OpenGL 3D demo</h2>
+	    <h2>Mappy</h2>
 	    <video preload="none" controls muted poster="old/img/opengl_3D_demo.png">
 	       --- Browser dose not support format --- 
 	       <source src="old/videos/opengl_3D_demo.mp4" type="video/mp4">
