modified:   about_en.html 	modified:   main.css

--- a/about_en.html
+++ b/about_en.html
@@ -13,6 +13,16 @@
 	 <a href="">-- Team projects --</a>
 	 <a href="">-- Skills --</a>
 	 <hr>
+	 
+	 <article>
+	    <h2>This page</h2>
+	    <p>My portfolio page</p>
+	    <ul>
+	       <li>Platforms :: Terminal, Computer, Phone</li>
+	       <li>Written in :: HTML and CSS</li>
+	    </ul>
+	    <a href="">-- Github --</a>
+	 </article>
 
       </main>
    </body>
