modified:   main.css 	modified:   main_team_en.html 	modified:   skills_en.html

--- a/skills_en.html
+++ b/skills_en.html
@@ -14,6 +14,98 @@
 	 <a href="about_en.html">-- About --</a>
 	 <hr>
 
+	 <h2>Programming/Markup Languages</h2>
+	 <table>
+	    <tr>
+	       <th>Language</th>
+	       <th>Year learnt</th>
+	       <th>Last used</th>
+	    </tr>
+	    <tr>
+	       <th>C</th>
+	       <th>2018</th>
+	       <th>2021</th>
+	    </tr>
+
+	    <tr>
+	       <th>POSIX C</th>
+	       <th>2019</th>
+	       <th>2021</th>
+	    </tr>
+
+	    <tr>
+	       <th>C/C++</th>
+	       <th>2015</th>
+	       <th>2021</th>
+	    </tr>
+
+	    <tr>
+	       <th>C#</th>
+	       <th>2012</th>
+	       <th>2021</th>
+	    </tr>
+
+	    <tr>
+	       <th>HTML</th>
+	       <th>2010</th>
+	       <th>2021</th>
+	    </tr>
+
+	    <tr>
+	       <th>CSS</th>
+	       <th>2013</th>
+	       <th>2021</th>
+	    </tr>
+
+	    <tr>
+	      <th>VC++</th>
+	      <th>2015</th>
+	      <th>2019<th>
+	    </tr>
+
+	    <tr>
+	       <th>JavaScript</th>
+	       <th>2013</th>
+	       <th>2021</th>
+	    </tr>
+
+	    <tr>
+	       <th>Java</th>
+	       <th>2011</th>
+	       <th>2018</th>
+	    <tr>
+
+	    <tr>
+	       <th>LUA</th>
+	       <th>2011</th>
+	       <th>2020</th>
+	    </tr>
+
+	    <tr>
+	       <th>BASH</th>
+	       <th>2019</th>
+	       <th>2021</th>
+	    <tr>
+
+	    <tr>
+	       <th>Assembly</th>
+	       <th>2015</th>
+	       <th>2020</th>
+	    </tr>
+
+	    <tr>
+	       <th>Haskall</th>
+	       <th>2019</th>
+	       <th>2019</th>
+	    </tr>
+
+	    <tr>
+	       <th>PHP</th>
+	       <th>~2014</th>
+	       <th>2020<th>
+	    </tr>
+	 </table>
+
       </main>
    </body>
 </html>
