modified:   main.css 	modified:   skills_en.html

--- a/skills_en.html
+++ b/skills_en.html
@@ -8,10 +8,11 @@
       <main> 
 	 <h1>Skills</h1>
 	 <hr>
-	 
-	 <a href="main_en.html">-- Projects --</a>
-	 <a href="">-- Team projects --</a>
-	 <a href="about_en.html">-- About --</a>
+	 <nav>
+	    <a href="main_en.html">-- Projects --</a>
+	    <a href="">-- Team projects --</a>
+	    <a href="about_en.html">-- About --</a>
+	 </nav>
 	 <hr>
 
 	 <h2>Programming/Markup Languages</h2>
@@ -103,6 +104,33 @@
 	       <th>PHP</th>
 	       <th>~2014</th>
 	       <th>2020<th>
+	    </tr>
+	 </table>
+
+	 <h2>Human languages</h2>
+	 <table>
+	    <tr>
+	       <th>Skill</th>
+	       <th>First learnt</th>
+	       <th>Last Used</th>
+	    </tr>
+
+	    <tr>
+	       <th>Swedish</th>
+	       <th>~1995</th>
+	       <th>2021</th>
+	    </tr>
+
+	    <tr>
+	       <th>English</th>
+	       <th>~1995</th>
+	       <th>2021</th>
+	    </tr>
+
+	    <tr>
+	       <th>Japanese</th>
+	       <th>2016</th>
+	       <th>2021</th>
 	    </tr>
 	 </table>
 
